<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="search_button_string">Search</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="settings_title">Advanced Search Options</string>
    <string name="title_activity_image_settings">ImageSettings</string>
    <string name="image_size_text">Image Size</string>
    <string name="image_type_text">Image Type</string>
    <string name="color_filter_text">Color Filter</string>
    <string name="site_filter_text">Site Filter</string>
    <string name="image_size_hint">small</string>
    <string name="image_type_hint">faces</string>
    <string name="color_filter_hint">blue</string>
    <string name="site_filter_hint">yahoo.com</string>
    <string name="settings_button_string">Save</string>
    <string name="search_title">Search</string>
    <string name="search_activity_title">ImageSearch</string>
    <string name="background_image_desc">Search</string>
    <string name="home_screen_text1">Google Image Search Client</string>
    <string name="home_screen_text2">Click Search and Go!</string>
    <string name="settings_item">Settings</string>
    <string name="share_string">Share</string>
    
    <string-array name="image_size_array">
        <item>None</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>extra-large</item>
    </string-array>
    
    <string-array name="image_color_array">
        <item>None</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    
    <string-array name="image_type_array">
        <item>None</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

</resources>
